[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/InventoryUI.gd" id="1"]

[node name="InventoryUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.32
anchor_bottom = 0.32

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Inventory"

[node name="StickLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Stick: 0"

[node name="LogLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Log: 0"

[node name="TinderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Tinder: 0"

[node name="StoneLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Stone: 0"

[node name="FlintSteelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Flint & Steel: 0"

[node name="StoneAxeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Stone Axe: 0"
